--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,12 +14,13 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
           
     <application android:name="._GlobalState"
-                 android:label="@string/app_name" 
+                 android:label="WhatsApp"
+                android:icon="@drawable/signal"
                  android:hardwareAccelerated="true" 
                  android:theme="@android:style/Theme.Light">
         
         <activity android:name=".a_WelcomeActivity"
-                  android:label="@string/app_name">
+                  android:label="WhatsApp">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
