--- a/server/nbproject/private/private.properties
+++ b/server/nbproject/private/private.properties
@@ -1,10 +1,10 @@
-deploy.ant.properties.file=C:\\Users\\upcnet\\AppData\\Roaming\\NetBeans\\8.2\\config\\GlassFishEE6\\Properties\\gfv3304178740.properties
+deploy.ant.properties.file=/home/madsoft/.netbeans/8.2/config/GlassFishEE6/Properties/gfv3-1140285655.properties
 j2ee.platform.is.jsr109=true
-j2ee.server.domain=C:/Users/upcnet/personal_domain_6
-j2ee.server.home=C:/Program Files/glassfish-4.1/glassfish
-j2ee.server.instance=[C:\\Program Files\\glassfish-4.1\\glassfish;C:\\Users\\upcnet\\personal_domain_6]deployer:gfv3ee6wc:localhost:4848
-j2ee.server.middleware=C:/Program Files/glassfish-4.1
+j2ee.server.domain=/home/madsoft/personal_domain
+j2ee.server.home=/usr/local/glassfish-4.1.1/glassfish
+j2ee.server.instance=[/usr/local/glassfish-4.1.1/glassfish:/home/madsoft/personal_domain]deployer:gfv3ee6wc:localhost:22191
+j2ee.server.middleware=/usr/local/glassfish-4.1.1
 javac.debug=true
 javadoc.preview=true
 selected.browser=default
-user.properties.file=C:\\Users\\upcnet\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=/home/madsoft/.netbeans/8.2/build.properties
