--- a/client/app/build.gradle
+++ b/client/app/build.gradle
@@ -19,6 +19,7 @@ android {
 }
 
 dependencies {
-    compile 'com.google.code.gson:gson:2.2.4'
-    compile files('libs/tyrus-standalone-client-1.3.3.jar')
+    implementation 'com.google.code.gson:gson:2.2.4'
+    api files('libs/tyrus-standalone-client-1.3.3.jar')
+    implementation 'com.android.support:support-v4:27.1.1'
 }
