--- a/client/build.gradle
+++ b/client/build.gradle
@@ -7,6 +7,9 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:3.1.2'
     }
+    dependencies {
+        classpath 'com.android.support:support-v4:19.0.+'
+    }
 }
 
 allprojects {
