--- a/client/app/build.gradle
+++ b/client/app/build.gradle
@@ -20,6 +20,7 @@ android {
 
 dependencies {
     implementation 'com.google.code.gson:gson:2.2.4'
-    api files('libs/tyrus-standalone-client-1.3.3.jar')
+    implementation files('libs/tyrus-standalone-client-1.13.1.jar')
     implementation 'com.android.support:support-v4:27.1.1'
 }
+
