--- a/client/app/build.gradle
+++ b/client/app/build.gradle
@@ -22,5 +22,6 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.2.4'
     implementation files('libs/tyrus-standalone-client-1.13.1.jar')
     implementation 'com.android.support:support-v4:27.1.1'
+    implementation 'com.github.simbiose:Encryption:2.0.1'
 }
 
