--- a/client/app/src/main/AndroidManifest.xml
+++ b/client/app/src/main/AndroidManifest.xml
@@ -12,7 +12,11 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
-          
+    <!-- Add permission -->
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+    <uses-permission android:name="android.permission.CONNECTIVITY_CHANGE" />
+
+
     <application android:name="._GlobalState"
                  android:label="WhatsApp"
                 android:icon="@drawable/signal"
@@ -46,19 +50,20 @@
         </activity>
 
         <service android:name=".service.PushService" />
-                
 
-    <!-- Declare receiver for BOOT_COMPLETED event. -->
     <receiver android:name=".service.Bootup_receiver" android:enabled="true" android:exported="false">
         <intent-filter>
             <action android:name="android.intent.action.BOOT_COMPLETED"/>
+            <action android:name="android.net.conn.CONNECTIVITY_CHANGE" />
         </intent-filter>
     </receiver>
 
+
+
 </application>
 
-    <!-- Add permission -->
-<uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
 
 
-</manifest> 
+</manifest>
+
+
